tests/diagnostics_golden/diag_pr118c_invalid_binary_width.txt
Diagnostics Golden: PR11.8c Invalid Binary Width
Source: tests/negative/neg_pr118c_invalid_binary_width.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr118c_invalid_binary_width.safe:3:28: error: binary width must be one of 8, 16, 32, or 64
  |
  | 3 |    type nibble is binary (4)
  |   |                            ^
  |
------------------------------------------------------------------------
